[travis] allow Ruby-head to fail
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,9 @@ matrix:
     - rvm: 2.3.0
       env:
         - CODECLIMATE=true
+  allow_failures:
+    - rvm: ruby-head
+  fast_finish: true
 
 before_script:
   - bundle exec rake db:migrate
