--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,9 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
-# TODO Comment out these rules if you are OK with secrets being uploaded to the repo
+# !! Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
-config/secrets.yml
+#config/secrets.yml
 
 ## Environment normalization:
 /.bundle
