--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -3,7 +3,7 @@
 # The "main" locale.
 base_locale: de
 ## All available locales are inferred from the data by default. Alternatively, specify them explicitly:
-#locales: [en]
+locales: [de, en]
 ## Reporting locale, default: en. Available: en, ru.
 #internal_locale: en
 
@@ -18,7 +18,7 @@ data:
     ## Default:
     # - config/locales/%{locale}.yml
     ## More files:
-    - config/locales/**/*.%{locale}.yml
+    - config/locales/**/%{locale}.yml
     ## Another gem (replace %#= with %=):
     # - "<%#= %x[bundle show vagrant].chomp %>/templates/locales/%{locale}.yml"
 
@@ -26,12 +26,12 @@ data:
   # `i18n-tasks normalize -p` will force move the keys according to these rules
   write:
     ## For example, write devise and simple form keys to their respective files:
-    #- ['{devise, simple_form}.*', 'config/locales/\1.%{locale}.yml']
+    - ['{devise, simple_form}.*', 'config/locales/\1.%{locale}.yml']
     ## Catch-all default:
-    #- config/locales/%{locale}.yml
+    - config/locales/%{locale}.yml
 
   ## Specify the router (see Readme for details). Valid values: conservative_router, pattern_router, or a custom class.
-  #router: convervative_router
+  router: convervative_router
 
   yaml:
     write:
@@ -53,11 +53,11 @@ search:
     - app/
 
   ## Root directories for relative keys resolution.
-  relative_roots:
-    - app/controllers
-    - app/helpers
-    - app/mailers
-    - app/views
+#  relative_roots:
+#    - app/controllers
+#    - app/helpers
+#    - app/mailers
+#    - app/views
 
   ## Files or `File.fnmatch` patterns to exclude from search. Some files are always excluded regardless of this setting:
   ##   %w(*.jpg *.png *.gif *.svg *.ico *.eot *.otf *.ttf *.woff *.woff2 *.pdf *.css *.sass *.scss *.less *.yml *.json)
@@ -88,8 +88,9 @@ search:
 # - '{devise,simple_form}.*'
 
 ## Consider these keys used:
-# ignore_unused:
-# - 'activerecord.attributes.*'
+ignore_unused:
+  - 'activerecord.attributes.*'
+  - 'activerecord.models.*'
 # - '{devise,kaminari,will_paginate}.*'
 # - 'simple_form.{yes,no}'
 # - 'simple_form.{placeholders,hints,labels}.*'
